version 1.1.6
- Fix: rules in YAML that included a literal "---" would not be parsed
  correctly (thanks to Paul Horikx for the fix)
- updated the Eurostat SDMX REST API endpoint


version 1.1.5
- Fixed several (possibly) invalid URLs pointing to the ESS CROS website
  by replacing them to versions of documents on markvanderloo.eu.
- Fixed several Rd bugs (thanks to Kurt Hornik for pointing out the changes).
- Changed internal function names to comply with stricter S3 methods checking
  in R CMD check --as-cran


version 1.1.3
- 'violating', 'satisfying' and 'lacking' are now generic (useful for validatedb)
- as.data.frame,confrontation-method now includes results of rules that yielded
  a warning. (Thanks to Patrick Driessens for reporting)
- as.data.frame,confrontation-method now returns a zero-row data frame when
  confrontation object has no results or only errors. (Thanks to Patrick
  Driessens for reporting)
- Fix: rules are checked when read from file (was skipped in earlier versions)
- Cookbook updates: removed reference to FAO SDMX server as it apears to not
  exist anymore. Updated references and links as journal papers are now
  published.

version 1.1.1
- 'aggregate' with argument by="rule" now ensures that the rule-by-rule
  output is in the same order as in the confrontation object (they
  used to be grouped by dimension structure). This fixes an issue
  where plots of validation objects would have the wrong placement
  of y-axis labels. (Thanks to Jonas Klingwort for reporting). 
- Fix in plot method for 'validation' objects: test for errors yielded a
  warning.

version 1.1.0
- Added support for SDMX codelists from SDMX REST APIs, see
  'sdmx_codelist', 'estat_codelist', 'global_codelist'.
- plot-validation method now prints a message to console when one or more
  rules yielded an error so it's explicit that not all data can be plotted.
  (Thanks to John Kennedy for pointing this out).