@@ -49,5 +49,5 @@ Collate:
     'syntax.R'
     'utils.R'
     'yaml.R'
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Encoding: UTF-8
