@@ -1,4 +1,5 @@
 version 1.1.6
+- Added nzchar(), startsWith(), endsWith() as pure validating function
 - Fix: rules in YAML that included a literal "---" would not be parsed
   correctly (thanks to Paul Horikx for the fix)
 - updated the Eurostat SDMX REST API endpoint
